--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iMusical",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "iMusical with MongoDB",
   "main": "index.js",
   "repository": "https://github.com/Long18/iMusical_NodeJs",
@@ -8,9 +8,11 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
-  },
+		"start": "node server.js",
+		"start-server": "nodemon server.js --ignore './client/'",
+		"start-client": "npm start --prefix client",
+		"dev": "concurrently \"npm run start-server\" \"npm run start-client\""
+	},
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
