--- a/client/package.json
+++ b/client/package.json
@@ -10,14 +10,15 @@
 		"js-cookie": "^2.2.1",
 		"react": "^16.14.0",
 		"react-dom": "^16.14.0",
+		"react-google-login": "^5.2.2",
 		"react-router-dom": "^5.3.0",
 		"react-scripts": "^3.4.4",
 		"validator": "^13.7.0"
 	},
 	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
+		"start": "react-scripts start .env",
+		"build": "react-scripts build .env",
+		"test": "react-scripts test .env",
 		"eject": "react-scripts eject"
 	},
 	"eslintConfig": {
@@ -37,5 +38,5 @@
 			"not op_mini all"
 		]
 	},
-	"proxy": "http://localhost:5000"
+	"proxy": "http://localhost:7000"
 }
