--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"dotenv": "^16.0.0",
 		"express": "^4.17.3",
 		"express-validator": "^6.14.0",
+		"google-auth-library": "^7.14.1",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^5.13.14",
 		"multer": "^1.4.4",
