login, logout, forgot email, CRUD product

--- a/backend/config/.env
+++ b/backend/config/.env
@@ -2,8 +2,8 @@ PORT = 7000
 
 MONGODB_URL = mongodb+srv://remote:admin@imusical.biyuh.mongodb.net/iMusical?retryWrites=true&w=majority
 
-JWT_SECRET_KEY = motNuaSuThatChuaChacLaSuThat
-JWT_EXPIRES = 2
+JWT_SECRET_KEY = motNuaSuThatChuaChacLaSuThat113!@@%@$@(*&^%$)
+JWT_EXPIRES = 7d
 COOKIE_EXPIRE = 7
 
 
