Tạm ổn với vài chức năng như xem product, đăng nhập, đăng ký,...

--- a/backend/config/.env.example
+++ b/backend/config/.env.example
@@ -2,9 +2,9 @@ PORT = 7000
 
 MONGODB_URL = mongodb+srv://remote:admin@imusical.biyuh.mongodb.net/iMusical?retryWrites=true&w=majority
 
-JWT_SECRET_KEY = motNuaSuThatChuaChacLaSuThat
-JWT_EXPIRES = 2
-COOKIE_EXPIRE = 7
+JWT_SECRET_KEY =
+JWT_EXPIRES =
+COOKIE_EXPIRE =
 
 
 SMPT_HOST =
