final to public src

--- a/backend/config/.env.example
+++ b/backend/config/.env.example
@@ -1,6 +1,6 @@
 PORT = 7000
 
-MONGODB_URL = mongodb+srv://remote:admin@imusical.biyuh.mongodb.net/iMusical?retryWrites=true&w=majority
+MONGODB_URL = 
 
 JWT_SECRET_KEY =
 JWT_EXPIRES =
